unpackaged/main/default/objects/Store_Special_Buy__c/Store_Special_Buy__c.object-meta.xml
<CustomObject>
    <description>This junction object captures the relationship between a Product with a non-standard Cost Price, and the specific Bunnings Location(s) where the special Cost Price is applicable</description>
    <label>Store Special Buy</label>
    <nameField>
        <displayFormat>SSB-{0000000}</displayFormat>
        <label>Store Special Buy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Special Buys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>