unpackaged/main/default/objects/Store_Special_Buy__c/fields/Special_Buy__c.field-meta.xml
<CustomField>
    <fullName>Special_Buy__c</fullName>
    <description>The Special Buy linked</description>
    <label>Special Buy</label>
    <referenceTo>Special_Buy__c</referenceTo>
    <relationshipLabel>Store Special Buys</relationshipLabel>
    <relationshipName>Store_Special_Buys</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>