unpackaged/main/default/objects/Store_Special_Buy__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <description>The Store/Location linked to the Special Buy</description>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Store Special Buys</relationshipLabel>
    <relationshipName>Store_Special_Buys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>