unpackaged/main/default/objects/Store_Special_Buy__c/fields/Store_Special_Buy_ID__c.field-meta.xml
<CustomField>
    <fullName>Store_Special_Buy_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The Store Special Buy external ID</description>
    <externalId>true</externalId>
    <label>Store Special Buy ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>